<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="4dp"
    android:background="@color/gray"
    tools:context=".MenuActivity">
    
    <Button
        android:id="@+id/btSinglePlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_menu"
        android:text="@string/single_player"
        android:textColor="@color/gay_white"
        android:onClick="startGame_singlePlayer" />

    <Button
        android:id="@+id/btMultiPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_menu"
        android:text="@string/multi_player"
        android:textColor="@color/gay_white"
        android:onClick="startGame_multiPlayer" />

    <Button
        android:id="@+id/btExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_menu"
        android:text="@string/exit"
        android:textColor="@color/gay_white"
        android:onClick="exitApp" />

</LinearLayout>