<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:gravity="center_vertical|center_horizontal"
    tools:context=".OnlineGameActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/frame"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="3">

            <ImageView
                android:id="@+id/ivFrame11"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/cell"
                android:onClick="gameBoardClick" />

            <ImageView
                android:id="@+id/ivFrame12"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/cell"
                android:onClick="gameBoardClick" />

            <ImageView
                android:id="@+id/ivFrame13"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/cell"
                android:onClick="gameBoardClick" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="3">

            <ImageView
                android:id="@+id/ivFrame21"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/cell"
                android:onClick="gameBoardClick" />

            <ImageView
                android:id="@+id/ivFrame22"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/cell"
                android:onClick="gameBoardClick" />

            <ImageView
                android:id="@+id/ivFrame23"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/cell"
                android:onClick="gameBoardClick" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="3">

            <ImageView
                android:id="@+id/ivFrame31"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/cell"
                android:onClick="gameBoardClick" />

            <ImageView
                android:id="@+id/ivFrame32"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/cell"
                android:onClick="gameBoardClick" />

            <ImageView
                android:id="@+id/ivFrame33"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/cell"
                android:onClick="gameBoardClick" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/tvPlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p1"
        android:textAlignment="center"
        android:textColor="@color/gay_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p2"
        android:textAlignment="center"
        android:textColor="@color/gay_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tableLayout"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>